# GameHelp

./: CMakeLists.txt
Content/: Config.json  Save.json
Engine/Include/: InputActions.h
Engine/Include/Core/: Engine.h  EngineConfig.h  EngineContext.h  EngineVisitor.h  Overlay.h
Engine/Include/Managers/: AudioManager.h  ClipboardManager.h  CursorManager.h  GuiManager.h  InputManager.h  RandomManager.h  RenderManager.h  ResourceManager.h  SaveManager.h  SceneManager.h  ScreenshotManager.h  TimeManager.h
Engine/Include/Scene/: Scene.h  SceneFactory.h  SceneUtils.h
Engine/Include/Utils/: Cooldown.h  InputBindings.h  Verify.h  log.h
Engine/Source/Core/: Engine.cpp  EngineConfig.cpp  EngineVisitor.cpp  Overlay.cpp
Engine/Source/Managers/: AudioManager.cpp  ClipboardManager.cpp  CursorManager.cpp  GuiManager.cpp  InputManager.cpp  RandomManager.cpp  RenderManager.cpp  ResourceManager.cpp  SaveManager.cpp  SceneManager.cpp  ScreenshotManager.cpp  TimeManager.cpp
Engine/Source/Scene/: SceneFactory.cpp
Engine/Source/Utils/: Cooldown.cpp  InputBindings.cpp
Games/Include/: BaseCharacter.h  Bounce.h  CharacterState.h  Collisions.h  LabScene.h  StartScene.h
Games/Include/CharacterManager/: PlayerCharacter.h
Games/Include/Config/: BounceConfig.h
Games/Include/EnemiesManager/: FinalBoss.h  FinalBossEnemyStats.h
Games/Include/GamePlayOverLay/: GamePlayOverLay.h
Games/Include/PauseMenu/: PauseMenu.h
Games/Include/Types/: BounceTypes.h
Games/Source/: BaseCharacter.cpp  Bounce.cpp  LabScene.cpp  StartScene.cpp
Games/Source/EnemiesManager/: FinalBoss.cpp
(+9 files in other folders)
